fix: add multiplicacion input and output for age calculation

--- a/action.yml
+++ b/action.yml
@@ -10,6 +10,9 @@ inputs:
   edad:
     description: 'Edad'
     required: true
+  multiplicacion:
+    description: 'Multiplicacion edad'
+    required: false    
 runs:
   using: 'node20'
   main: 'dist/index.js'
